Fix horizontal scroll at .code-tab

--- a/src/styles/components/_code-tab.scss
+++ b/src/styles/components/_code-tab.scss
@@ -51,9 +51,8 @@
   }
 
   &__body {
-    [role='tabpanel'] {
+    .prism-code {
       max-height: 40rem;
-      overflow-y: auto;
     }
   }
 }
